# GT-DriveController

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_log_link.txt  build_log_link_2.txt  build_log_link_3.txt  create_fmu.ps1  setup_python_runtime.ps1  test_output.txt
docs/: README.md  build.md  implementation.md  technicaldoc.md
fmu/: modelDescription.xml
include/: OSMPController.h
python/: logic.py
resources/: logic.py
resources/python/: python312._pth
src/: OSMPController.cpp  main.cpp  shim.cpp
tests/: diagnose_dll.py  reproduce_load_error.py  test_fmu.cpp
